Update and fix overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,7 @@ body {
   color: #121212;
   font-family: Inter, Helvetica Neue, Helvetica, Arial, sans-serif;
   margin: 0;
+  overflow-x: hidden;
 }
 
 nav {
